fixed hero/nav bar spacing issue

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -46,7 +46,7 @@
 	color: white;
 	font-family: Helvetica, Times, serif;
 	font-size: 60px;
-	margin-top:7%;
+	margin-top:0%;
 }		
 .intro-par{
 	text-align: center;
